--- a/simple-project/pom.xml
+++ b/simple-project/pom.xml
@@ -68,6 +68,11 @@
 		 	<artifactId>spring-boot-devtools</artifactId>
 		 	<optional>true</optional>
 		 </dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>annotationProcessor</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
