--- a/simple-project/src/main/resources/application.properties
+++ b/simple-project/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.messages.basename=i18n/login
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/dragonHub
 spring.datasource.username=postgres
 spring.datasource.password=zzp15857512341
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
